# Face-Embeddings

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
configs/: train.yaml
notebooks/: tmp.ipynb
src/: convert.py  inference.py  train.py
src/callbacks/: debug.py  experiment_tracking.py
src/data/: datamodule.py  dataset.py  transform.py
src/models/: __init__.py  face_module.py
src/training/: pipeline.py
src/utils/: __init__.py  config.py  constants.py  logger.py  metrics.py  vips_config.py
