[project]
name = "face-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.5",
    "clearml>=1.17.1",
    "ellzaf-ml>=1.4.14",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lightning>=2.5.0.post0",
    "markupsafe==2.1.3",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
    "pytorch-metric-learning>=2.8.1",
    "pyvips>=2.2.3",
    "rich>=13.9.4",
    "tensorboard>=2.19.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchinfo>=1.8.0",
    "torchvision==0.20.1",
]
