[project]
name = "face-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "albumentations>=2.0.5",
    "clearml>=1.17.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lightning>=2.5.0.post0",
    "markupsafe==2.1.3",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
    "pytorch-metric-learning>=2.8.1",
    "pyvips>=2.2.3",
    "rich>=13.9.4",
    "tensorboard>=2.19.0",
    "torch>=2.2.0",
    "torchvision>=0.21.0",
    "torchinfo>=1.8.0",
    "ellzaf-ml>=1.4.14",
    "click>=8.1.8",
    "onnxruntime-gpu>=1.20.2",
    "onnx>=1.17.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]
torchvision = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
